Fixed horizontal scrolling for different views

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,7 +1,7 @@
 body{
     margin: 0;
     padding: 0;
-    overflow-x: hidden;
+    /*overflow-x: hidden;*/
 }
 
 .home-container {
@@ -54,6 +54,10 @@ body{
 }
 
 @media screen and (max-width: 760px) {
+    body{
+        overflow-x: hidden;
+    }
+
     .img-view {
         width: auto;
         height: 50rem;
@@ -93,7 +97,7 @@ body{
     }
 }
 
-@media screen and (min-width: 769px) and (max-width:1440px) {
+@media screen and (min-width: 769px) and (max-width:1440px) { /*Change width*/
     .name-container {
         white-space: nowrap;
     }
